updating lib pdf and some codes

--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -1,246 +1,374 @@
-\section{STL}
-\subsection{Some Data Structures of STL}
-\raggedbottom\lstinputlisting[style=cpp]{code/STL_DS.cpp}
-\hrulefill
-\subsection{Ordered Set from GNU PBDS}
-\raggedbottom\lstinputlisting[style=cpp]{code/ordered_set.cpp}
-\hrulefill
-
 \section{Binary Search and Ternary Search}
-\subsection{Binary Search}
-\raggedbottom\lstinputlisting[style=cpp]{code/BS.cpp}
-\hrulefill
-\subsection{Upper Bound}
-\raggedbottom\lstinputlisting[style=cpp]{code/UpperBound.cpp}
-\hrulefill
-\subsection{Lower Bound}
+\subsection{LowerBound}
 \raggedbottom\lstinputlisting[style=cpp]{code/LowerBound.cpp}
 \hrulefill
-\subsection{STL Lower Bound and Upper Bound}
-\raggedbottom\lstinputlisting[style=cpp]{code/STL.cpp}
-\hrulefill
-\subsection{Ternary Search}
-\raggedbottom\lstinputlisting[style=cpp]{code/TS.cpp}
-\hrulefill
-\subsection{Some Aplications}
+\subsection{Aplications}
 \raggedbottom\lstinputlisting[style=cpp]{code/Aplications.cpp}
 \hrulefill
+\subsection{TS}
+\raggedbottom\lstinputlisting[style=cpp]{code/TS.cpp}
+\hrulefill
+\subsection{UpperBound}
+\raggedbottom\lstinputlisting[style=cpp]{code/UpperBound.cpp}
+\hrulefill
+\subsection{STL}
+\raggedbottom\lstinputlisting[style=cpp]{code/STL.cpp}
+\hrulefill
+\subsection{BS}
+\raggedbottom\lstinputlisting[style=cpp]{code/BS.cpp}
+\hrulefill
 
-\section{Dynamic Programming}
+\section{Miscellaneous}
+\subsection{meetinthemiddle}
+\raggedbottom\lstinputlisting[style=cpp]{code/meetinthemiddle.cpp}
+\hrulefill
+\subsection{bitmasks}
+\raggedbottom\lstinputlisting[style=cpp]{code/bitmasks.cpp}
+\hrulefill
+\subsection{two pointers}
+\raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
+\hrulefill
+\subsection{inversion count}
+\raggedbottom\lstinputlisting[style=cpp]{code/inversion_count.cpp}
+\hrulefill
+\subsection{sprague grundy}
+\raggedbottom\lstinputlisting[style=cpp]{code/sprague_grundy.cpp}
+\hrulefill
+\subsection{stack trick}
+\raggedbottom\lstinputlisting[style=cpp]{code/stack_trick.cpp}
+\hrulefill
+
+\section{STL}
+\subsection{ordered set}
+\raggedbottom\lstinputlisting[style=cpp]{code/ordered_set.cpp}
+\hrulefill
+\subsection{STL}
+\raggedbottom\lstinputlisting[style=txt]{code/STL.txt}
+\hrulefill
+
+\section{Utils}
+\subsection{runner2}
+\raggedbottom\lstinputlisting[style=py]{code/runner2.py}
+\hrulefill
+\subsection{  int128}
+\raggedbottom\lstinputlisting[style=cpp]{code/__int128.cpp}
+\hrulefill
+\subsection{execution time}
+\raggedbottom\lstinputlisting[style=cpp]{code/execution_time.cpp}
+\hrulefill
+\subsection{runner}
+\raggedbottom\lstinputlisting[style=py]{code/runner.py}
+\hrulefill
+
+\section{Math}
+\subsection{totient}
+\raggedbottom\lstinputlisting[style=cpp]{code/totient.cpp}
+\hrulefill
+\subsection{iterative fft}
+\raggedbottom\lstinputlisting[style=cpp]{code/iterative_fft.cpp}
+\hrulefill
+\subsection{fraction}
+\raggedbottom\lstinputlisting[style=cpp]{code/fraction.cpp}
+\hrulefill
+\subsection{gaussian elimination2}
+\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination2.cpp}
+\hrulefill
+\subsection{modular arithmetic}
+\raggedbottom\lstinputlisting[style=cpp]{code/modular_arithmetic.cpp}
+\hrulefill
+\subsection{crivo}
+\raggedbottom\lstinputlisting[style=cpp]{code/crivo.cpp}
+\hrulefill
+\subsection{divisors}
+\raggedbottom\lstinputlisting[style=cpp]{code/divisors.cpp}
+\hrulefill
+\subsection{gaussian elimination}
+\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination.cpp}
+\hrulefill
+\subsection{primefactors2}
+\raggedbottom\lstinputlisting[style=cpp]{code/primefactors2.cpp}
+\hrulefill
+\subsection{matrix exponentiation2}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation2.cpp}
+\hrulefill
+\subsection{segmentedsieve}
+\raggedbottom\lstinputlisting[style=cpp]{code/segmentedsieve.cpp}
+\hrulefill
+\subsection{pollard rho}
+\raggedbottom\lstinputlisting[style=cpp]{code/pollard_rho.cpp}
+\hrulefill
+\subsection{xor trie}
+\raggedbottom\lstinputlisting[style=cpp]{code/xor_trie.cpp}
+\hrulefill
+\subsection{mobius}
+\raggedbottom\lstinputlisting[style=cpp]{code/mobius.cpp}
+\hrulefill
+\subsection{fft}
+\raggedbottom\lstinputlisting[style=cpp]{code/fft.cpp}
+\hrulefill
+\subsection{lagrange}
+\raggedbottom\lstinputlisting[style=cpp]{code/lagrange.cpp}
+\hrulefill
+\subsection{primefactors}
+\raggedbottom\lstinputlisting[style=cpp]{code/primefactors.cpp}
+\hrulefill
+\subsection{operadores binarios}
+\raggedbottom\lstinputlisting[style=cpp]{code/operadores_binarios.cpp}
+\hrulefill
+\subsection{matrix exponentiation}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
+\hrulefill
+\subsection{diophantine}
+\raggedbottom\lstinputlisting[style=cpp]{code/diophantine.cpp}
+\hrulefill
+\subsection{crt}
+\raggedbottom\lstinputlisting[style=cpp]{code/crt.cpp}
+\hrulefill
+\subsection{ntt}
+\raggedbottom\lstinputlisting[style=cpp]{code/ntt.cpp}
+\hrulefill
+
+\section{Dynamic programming and common problems}
+\subsection{cht}
+\raggedbottom\lstinputlisting[style=cpp]{code/cht.cpp}
+\hrulefill
+\subsection{subsequences string}
+\raggedbottom\lstinputlisting[style=cpp]{code/subsequences_string.cpp}
+\hrulefill
+\subsection{sos dp}
+\raggedbottom\lstinputlisting[style=cpp]{code/sos_dp.cpp}
+\hrulefill
+\subsection{aliens trick}
+\raggedbottom\lstinputlisting[style=cpp]{code/aliens_trick.cpp}
+\hrulefill
+\subsection{largest square}
+\raggedbottom\lstinputlisting[style=cpp]{code/largest_square.cpp}
+\hrulefill
+\subsection{broken profile}
+\raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
+\hrulefill
+\subsection{max matrix path}
+\raggedbottom\lstinputlisting[style=cpp]{code/max_matrix_path.cpp}
+\hrulefill
+\subsection{dynamic cht}
+\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_cht.cpp}
+\hrulefill
+\subsection{lis}
+\raggedbottom\lstinputlisting[style=cpp]{code/lis.cpp}
+\hrulefill
 \subsection{Knapsack}
 \raggedbottom\lstinputlisting[style=cpp]{code/Knapsack.cpp}
 \hrulefill
-\subsection{Coin Change DP}
+\subsection{tip}
 \raggedbottom\lstinputlisting[style=cpp]{code/tip.cpp}
 \hrulefill
-\subsection{Longest Common Subsequence}
-\raggedbottom\lstinputlisting[style=cpp]{code/lcs.cpp}
-\hrulefill
-\subsection{Longest Increasing Subsequence}
-\raggedbottom\lstinputlisting[style=cpp]{code/lis.cpp}
-\hrulefill
-\subsection{Kadane}
+\subsection{largest-sum-contiguous-subarray}
 \raggedbottom\lstinputlisting[style=cpp]{code/largest-sum-contiguous-subarray.cpp}
 \hrulefill
-\subsection{Max Matrix Path}
-\raggedbottom\lstinputlisting[style=cpp]{code/max_matrix_path.cpp}
+\subsection{lcs}
+\raggedbottom\lstinputlisting[style=cpp]{code/lcs.cpp}
 \hrulefill
-\subsection{Largest Sub-Matrix Square}
-\raggedbottom\lstinputlisting[style=cpp]{code/largest_square.cpp}
+\subsection{divideandconquer}
+\raggedbottom\lstinputlisting[style=cpp]{code/divideandconquer.cpp}
 \hrulefill
-\subsection{Subsequences Matching}
-\raggedbottom\lstinputlisting[style=cpp]{code/subsequences_string.cpp}
-\hrulefill
-\subsection{Digit DP}
-\raggedbottom\lstinputlisting[style=cpp]{code/Digitdp.cpp}
-\hrulefill
-\subsection{Expected Value}
+\subsection{expected value}
 \raggedbottom\lstinputlisting[style=cpp]{code/expected_value.cpp}
 \hrulefill
-\subsection{Broken Profile DP}
-\raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
+\subsection{Digitdp}
+\raggedbottom\lstinputlisting[style=cpp]{code/Digitdp.cpp}
 \hrulefill
 
-\section{Common Problems}
-\subsection{Stack Trick}
-\raggedbottom\lstinputlisting[style=cpp]{code/stack_trick.cpp}
-\hrulefill
-\subsection{Two Pointers Method}
-\raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
-\hrulefill
-\subsection{Inversion Count}
-\raggedbottom\lstinputlisting[style=cpp]{code/inversion_count.cpp}
-\hrulefill
-\subsection{Meet In The Middle}
-\raggedbottom\lstinputlisting[style=cpp]{code/meetinthemiddle.cpp}
-\hrulefill
-
-\section{Graph and Trees}
-\subsection{BFS}
-\raggedbottom\lstinputlisting[style=cpp]{code/BFS.cpp}
-\hrulefill
-\subsection{DFS}
-\raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
-\hrulefill
-\subsection{Bipartite Graph}
-\raggedbottom\lstinputlisting[style=cpp]{code/Grafo_Bipartido.cpp}
-\hrulefill
-\subsection{Dijkstra}
-\raggedbottom\lstinputlisting[style=cpp]{code/Dijkstra.cpp}
+\section{Graph}
+\subsection{centroid decomposition2}
+\raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition2.cpp}
 \hrulefill
 \subsection{Floyd Warshall}
 \raggedbottom\lstinputlisting[style=cpp]{code/Floyd_Warshall.cpp}
 \hrulefill
-\subsection{Kruskal}
-\raggedbottom\lstinputlisting[style=cpp]{code/Kruskal.cpp}
+\subsection{strong orientation}
+\raggedbottom\lstinputlisting[style=cpp]{code/strong_orientation.cpp}
+\hrulefill
+\subsection{scc}
+\raggedbottom\lstinputlisting[style=cpp]{code/scc.cpp}
+\hrulefill
+\subsection{hld}
+\raggedbottom\lstinputlisting[style=cpp]{code/hld.cpp}
 \hrulefill
 \subsection{Prim}
 \raggedbottom\lstinputlisting[style=cpp]{code/Prim.cpp}
 \hrulefill
-\subsection{DSU}
-\raggedbottom\lstinputlisting[style=cpp]{code/Union_Find.cpp}
+\subsection{articulation points}
+\raggedbottom\lstinputlisting[style=cpp]{code/articulation_points.cpp}
 \hrulefill
-\subsection{Euler Path}
-\raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
+\subsection{mincostflow}
+\raggedbottom\lstinputlisting[style=cpp]{code/mincostflow.cpp}
 \hrulefill
-\subsection{Topological Sort}
-\raggedbottom\lstinputlisting[style=cpp]{code/Topological_Sort.cpp}
+\subsection{eulertour}
+\raggedbottom\lstinputlisting[style=cpp]{code/eulertour.cpp}
 \hrulefill
-\subsection{Cycle Detection}
-\raggedbottom\lstinputlisting[style=cpp]{code/cycle_detection.cpp}
+\subsection{TreeDiameter}
+\raggedbottom\lstinputlisting[style=cpp]{code/TreeDiameter.cpp}
+\hrulefill
+\subsection{Grafo Bipartido}
+\raggedbottom\lstinputlisting[style=cpp]{code/Grafo_Bipartido.cpp}
+\hrulefill
+\subsection{dsu}
+\raggedbottom\lstinputlisting[style=cpp]{code/dsu.cpp}
+\hrulefill
+\subsection{reroot}
+\raggedbottom\lstinputlisting[style=cpp]{code/reroot.cpp}
+\hrulefill
+\subsection{hld edge}
+\raggedbottom\lstinputlisting[style=cpp]{code/hld_edge.cpp}
+\hrulefill
+\subsection{dinic}
+\raggedbottom\lstinputlisting[style=cpp]{code/dinic.cpp}
+\hrulefill
+\subsection{hopcroft karp}
+\raggedbottom\lstinputlisting[style=cpp]{code/hopcroft_karp.cpp}
+\hrulefill
+\subsection{dsu rollback}
+\raggedbottom\lstinputlisting[style=cpp]{code/dsu_rollback.cpp}
+\hrulefill
+\subsection{MatrixDijkstra}
+\raggedbottom\lstinputlisting[style=cpp]{code/MatrixDijkstra.cpp}
+\hrulefill
+\subsection{bridges}
+\raggedbottom\lstinputlisting[style=cpp]{code/bridges.cpp}
 \hrulefill
 \subsection{Ford Fulkerson}
 \raggedbottom\lstinputlisting[style=cpp]{code/Ford_Fulkerson.cpp}
 \hrulefill
-\subsection{Dinic}
-\raggedbottom\lstinputlisting[style=cpp]{code/dinic.cpp}
-\hrulefill
-\subsection{Min Cost Flow}
-\raggedbottom\lstinputlisting[style=cpp]{code/mincostflow.cpp}
-\hrulefill
-\subsection{Euler Tour}
-\raggedbottom\lstinputlisting[style=cpp]{code/eulertour.cpp}
+\subsection{caminhoeuleriano}
+\raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
 \hrulefill
 \subsection{LCA}
 \raggedbottom\lstinputlisting[style=cpp]{code/LCA.cpp}
 \hrulefill
-\subsection{Rerooting Technique}
-\raggedbottom\lstinputlisting[style=cpp]{code/reroot.cpp}
+\subsection{Topological Sort}
+\raggedbottom\lstinputlisting[style=cpp]{code/Topological_Sort.cpp}
 \hrulefill
-\subsection{Diameter Of A Tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/TreeDiameter.cpp}
+\subsection{Dijkstra}
+\raggedbottom\lstinputlisting[style=cpp]{code/Dijkstra.cpp}
 \hrulefill
-\subsection{Centroid Decomposition}
+\subsection{centroid decomposition}
 \raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition.cpp}
 \hrulefill
-\subsection{HLD Vertex}
-\raggedbottom\lstinputlisting[style=cpp]{code/hld.cpp}
+\subsection{DFS}
+\raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
 \hrulefill
-\subsection{HLD Edge}
-\raggedbottom\lstinputlisting[style=cpp]{code/hld_edge.cpp}
+\subsection{cycle detection}
+\raggedbottom\lstinputlisting[style=cpp]{code/cycle_detection.cpp}
 \hrulefill
-
-\section{Math}
-\subsection{Divisors Of a Number}
-\raggedbottom\lstinputlisting[style=cpp]{code/divisors.cpp}
+\subsection{Kruskal}
+\raggedbottom\lstinputlisting[style=cpp]{code/Kruskal.cpp}
 \hrulefill
-\subsection{Sieve}
-\raggedbottom\lstinputlisting[style=cpp]{code/crivo.cpp}
-\hrulefill
-\subsection{Prime Factors of a Number}
-\raggedbottom\lstinputlisting[style=cpp]{code/primefactors.cpp}
-\hrulefill
-\subsection{Prime Factors of a Number Using Sieve}
-\raggedbottom\lstinputlisting[style=cpp]{code/primefactors2.cpp}
-\hrulefill
-\subsection{Segmented Sieve}
-\raggedbottom\lstinputlisting[style=cpp]{code/segmentedsieve.cpp}
-\hrulefill
-\subsection{Modular Arithmetic}
-\raggedbottom\lstinputlisting[style=cpp]{code/modular_arithmetic.cpp}
-\hrulefill
-\subsection{Matrix Exponentiation}
-\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
-\hrulefill
-\subsection{Matrix Exponentiation Trick}
-\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation2.cpp}
-\hrulefill
-\subsection{Gaussian Elimination}
-\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination.cpp}
-\hrulefill
-\subsection{FFT}
-\raggedbottom\lstinputlisting[style=cpp]{code/fft.cpp}
-\hrulefill
-
-\section{Data Structures}
-\subsection{Fenwick Tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/fenwick.cpp}
-\hrulefill
-\subsection{Fenwick Tree With Range Update}
-\raggedbottom\lstinputlisting[style=cpp]{code/fenwick2.cpp}
-\hrulefill
-\subsection{Fenwick Tree 2D}
-\raggedbottom\lstinputlisting[style=cpp]{code/fenwick2d.cpp}
-\hrulefill
-\subsection{Segment Tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/SegTree.cpp}
-\hrulefill
-\subsection{Minimum and Frequency With Segment Tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
-\hrulefill
-\subsection{Segment Tree With Lazy Propagation}
-\raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
-\hrulefill
-\subsection{Sparse Table}
-\raggedbottom\lstinputlisting[style=cpp]{code/sparsetable.cpp}
-\hrulefill
-\subsection{Mo´s Algorithm}
-\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition.cpp}
-\hrulefill
-\subsection{Mo´s Algorithm With Element Update}
-\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition2.cpp}
-\hrulefill
-\subsection{Treap}
-\raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
-\hrulefill
-\subsection{Treap with Cyclic Shift and Reverse Operation}
-\raggedbottom\lstinputlisting[style=cpp]{code/treap2.cpp}
+\subsection{BFS}
+\raggedbottom\lstinputlisting[style=cpp]{code/BFS.cpp}
 \hrulefill
 
 \section{Strings}
-\subsection{String Hashing}
-\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing.cpp}
+\subsection{suffix automaton}
+\raggedbottom\lstinputlisting[style=cpp]{code/suffix_automaton.cpp}
 \hrulefill
-\subsection{String Hashing Without Division}
-\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing2.cpp}
-\hrulefill
-\subsection{Rabin Karp}
-\raggedbottom\lstinputlisting[style=cpp]{code/rabin-karp.cpp}
-\hrulefill
-\subsection{Manacher}
-\raggedbottom\lstinputlisting[style=cpp]{code/manacher.cpp}
-\hrulefill
-\subsection{Aho Corasick}
-\raggedbottom\lstinputlisting[style=cpp]{code/aho_corasick.cpp}
-\hrulefill
-\subsection{Suffix Array}
+\subsection{suffix array}
 \raggedbottom\lstinputlisting[style=cpp]{code/suffix_array.cpp}
 \hrulefill
-\subsection{Suffix Array With Radix Sort}
+\subsection{kmp}
+\raggedbottom\lstinputlisting[style=cpp]{code/kmp.cpp}
+\hrulefill
+\subsection{aho corasick}
+\raggedbottom\lstinputlisting[style=cpp]{code/aho_corasick.cpp}
+\hrulefill
+\subsection{stringhashing2}
+\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing2.cpp}
+\hrulefill
+\subsection{lcp in suffix array}
+\raggedbottom\lstinputlisting[style=cpp]{code/lcp_in_suffix_array.cpp}
+\hrulefill
+\subsection{substring fft}
+\raggedbottom\lstinputlisting[style=cpp]{code/substring_fft.cpp}
+\hrulefill
+\subsection{suffix array2}
 \raggedbottom\lstinputlisting[style=cpp]{code/suffix_array2.cpp}
 \hrulefill
-\subsection{LCP in Suffix Array}
-\raggedbottom\lstinputlisting[style=cpp]{code/lcp_in_suffix_array.cpp}
+\subsection{z-function}
+\raggedbottom\lstinputlisting[style=cpp]{code/z-function.cpp}
+\hrulefill
+\subsection{rabin-karp}
+\raggedbottom\lstinputlisting[style=cpp]{code/rabin-karp.cpp}
+\hrulefill
+\subsection{manacher}
+\raggedbottom\lstinputlisting[style=cpp]{code/manacher.cpp}
+\hrulefill
+\subsection{stringhashing}
+\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing.cpp}
 \hrulefill
 
 \section{Geometry}
-\subsection{Template}
-\raggedbottom\lstinputlisting[style=cpp]{code/points_and_vectors.cpp}
+\subsection{ConvexHull}
+\raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull.cpp}
 \hrulefill
-\subsection{line Sweep}
+\subsection{minkowski}
+\raggedbottom\lstinputlisting[style=cpp]{code/minkowski.cpp}
+\hrulefill
+\subsection{LineSweep}
 \raggedbottom\lstinputlisting[style=cpp]{code/LineSweep.cpp}
 \hrulefill
-\subsection{Convex Hull}
-\raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull.cpp}
+\subsection{points and vectors}
+\raggedbottom\lstinputlisting[style=cpp]{code/points_and_vectors.cpp}
+\hrulefill
+
+\section{Structures}
+\subsection{persistent seg}
+\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg.cpp}
+\hrulefill
+\subsection{treap}
+\raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
+\hrulefill
+\subsection{mergesorttree}
+\raggedbottom\lstinputlisting[style=cpp]{code/mergesorttree.cpp}
+\hrulefill
+\subsection{sparsetable}
+\raggedbottom\lstinputlisting[style=cpp]{code/sparsetable.cpp}
+\hrulefill
+\subsection{sqrt decomposition2}
+\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition2.cpp}
+\hrulefill
+\subsection{implicit seg}
+\raggedbottom\lstinputlisting[style=cpp]{code/implicit_seg.cpp}
+\hrulefill
+\subsection{min queue}
+\raggedbottom\lstinputlisting[style=cpp]{code/min_queue.cpp}
+\hrulefill
+\subsection{segtree lazy}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
+\hrulefill
+\subsection{fenwick3}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick3.cpp}
+\hrulefill
+\subsection{treap2}
+\raggedbottom\lstinputlisting[style=cpp]{code/treap2.cpp}
+\hrulefill
+\subsection{SegTree}
+\raggedbottom\lstinputlisting[style=cpp]{code/SegTree.cpp}
+\hrulefill
+\subsection{Segtree2}
+\raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
+\hrulefill
+\subsection{sqrt decomposition}
+\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition.cpp}
+\hrulefill
+\subsection{color update}
+\raggedbottom\lstinputlisting[style=cpp]{code/color_update.cpp}
+\hrulefill
+\subsection{bit2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/bit2d.cpp}
+\hrulefill
+\subsection{fenwick2}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick2.cpp}
+\hrulefill
+\subsection{fenwick}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick.cpp}
 \hrulefill
 
