--- a/Notebook (based on the stanfordacm script)/notebook.tex
+++ b/Notebook (based on the stanfordacm script)/notebook.tex
@@ -9,10 +9,10 @@
 \usepackage{multicol}
 
 \renewcommand*{\ttdefault}{pcr}
-\renewcommand\cftsecfont{\fontsize{8}{9}\bfseries}
-\renewcommand\cftsecpagefont{\fontsize{8}{9}\mdseries}
-\renewcommand\cftsubsecfont{\fontsize{5}{6}\mdseries}
-\renewcommand\cftsubsecpagefont{\fontsize{5}{6}\mdseries}
+\renewcommand\cftsecfont{\fontsize{10}{11}\bfseries}
+\renewcommand\cftsecpagefont{\fontsize{10}{11}\mdseries}
+\renewcommand\cftsubsecfont{\fontsize{8}{9}\mdseries}
+\renewcommand\cftsubsecpagefont{\fontsize{8}{9}\mdseries}
 \renewcommand\cftsecafterpnum{\vspace{-1ex}}
 \renewcommand\cftsubsecafterpnum{\vspace{-1ex}}
 
@@ -21,7 +21,7 @@
     breaklines=true,
     xleftmargin=\parindent,
     showstringspaces=false,
-    basicstyle=\fontsize{5.5}{6}\ttfamily,
+    basicstyle=\fontsize{10}{11}\ttfamily,
 }
 \lstdefinestyle{cpp}{
 	style=shared,
@@ -53,18 +53,18 @@
 \lstset{escapechar=@}
 
 \pagestyle{fancy}
-\fancyhead[L]{Notebook}
+\fancyhead[L]{UFAL Notebook}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
 \fancypagestyle{plain}
 {
-\fancyhead[L]{Notebook}
+\fancyhead[L]{UFAL Notebook}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 }
 
-\title{\vspace{-4ex}\Large{Notebook}}
+\title{\vspace{-4ex}\Large{UFAL Notebook}}
 \author{}
 \date{}
 
