final updates on notebook

--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -25,6 +25,9 @@
 \subsection{bitmasks}
 \raggedbottom\lstinputlisting[style=cpp]{code/bitmasks.cpp}
 \hrulefill
+\subsection{coordinate compression}
+\raggedbottom\lstinputlisting[style=cpp]{code/coordinate_compression.cpp}
+\hrulefill
 \subsection{two pointers}
 \raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
 \hrulefill
@@ -114,6 +117,9 @@
 \hrulefill
 \subsection{operadores binarios}
 \raggedbottom\lstinputlisting[style=cpp]{code/operadores_binarios.cpp}
+\hrulefill
+\subsection{baby step gigant step}
+\raggedbottom\lstinputlisting[style=cpp]{code/baby_step_gigant_step.cpp}
 \hrulefill
 \subsection{matrix exponentiation}
 \raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
@@ -242,6 +248,9 @@
 \subsection{caminhoeuleriano}
 \raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
 \hrulefill
+\subsection{mo trees}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_trees.cpp}
+\hrulefill
 \subsection{LCA}
 \raggedbottom\lstinputlisting[style=cpp]{code/LCA.cpp}
 \hrulefill
@@ -288,6 +297,9 @@
 \hrulefill
 \subsection{substring fft}
 \raggedbottom\lstinputlisting[style=cpp]{code/substring_fft.cpp}
+\hrulefill
+\subsection{min suffix}
+\raggedbottom\lstinputlisting[style=cpp]{code/min_suffix.cpp}
 \hrulefill
 \subsection{suffix array2}
 \raggedbottom\lstinputlisting[style=cpp]{code/suffix_array2.cpp}
@@ -349,6 +361,9 @@
 \hrulefill
 \subsection{treap2}
 \raggedbottom\lstinputlisting[style=cpp]{code/treap2.cpp}
+\hrulefill
+\subsection{persistent seg2}
+\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg2.cpp}
 \hrulefill
 \subsection{SegTree}
 \raggedbottom\lstinputlisting[style=cpp]{code/SegTree.cpp}
