update notebook and adding exchange arguments example

--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -70,6 +70,9 @@
 \subsection{iterative fft}
 \raggedbottom\lstinputlisting[style=cpp]{code/iterative_fft.cpp}
 \hrulefill
+\subsection{max xor subsequence}
+\raggedbottom\lstinputlisting[style=cpp]{code/max_xor_subsequence.cpp}
+\hrulefill
 \subsection{fraction}
 \raggedbottom\lstinputlisting[style=cpp]{code/fraction.cpp}
 \hrulefill
@@ -115,11 +118,17 @@
 \subsection{primefactors}
 \raggedbottom\lstinputlisting[style=cpp]{code/primefactors.cpp}
 \hrulefill
+\subsection{fwht}
+\raggedbottom\lstinputlisting[style=cpp]{code/fwht.cpp}
+\hrulefill
 \subsection{operadores binarios}
 \raggedbottom\lstinputlisting[style=cpp]{code/operadores_binarios.cpp}
 \hrulefill
 \subsection{baby step gigant step}
 \raggedbottom\lstinputlisting[style=cpp]{code/baby_step_gigant_step.cpp}
+\hrulefill
+\subsection{stars and bars}
+\raggedbottom\lstinputlisting[style=cpp]{code/stars_and_bars.cpp}
 \hrulefill
 \subsection{matrix exponentiation}
 \raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
@@ -152,6 +161,9 @@
 \hrulefill
 \subsection{broken profile}
 \raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
+\hrulefill
+\subsection{exchange arguments}
+\raggedbottom\lstinputlisting[style=cpp]{code/exchange_arguments.cpp}
 \hrulefill
 \subsection{max matrix path}
 \raggedbottom\lstinputlisting[style=cpp]{code/max_matrix_path.cpp}
@@ -206,6 +218,9 @@
 \subsection{articulation points}
 \raggedbottom\lstinputlisting[style=cpp]{code/articulation_points.cpp}
 \hrulefill
+\subsection{tree isomorfism}
+\raggedbottom\lstinputlisting[style=cpp]{code/tree_isomorfism.cpp}
+\hrulefill
 \subsection{mincostflow}
 \raggedbottom\lstinputlisting[style=cpp]{code/mincostflow.cpp}
 \hrulefill
@@ -227,6 +242,12 @@
 \subsection{hld edge}
 \raggedbottom\lstinputlisting[style=cpp]{code/hld_edge.cpp}
 \hrulefill
+\subsection{two sat}
+\raggedbottom\lstinputlisting[style=cpp]{code/two_sat.cpp}
+\hrulefill
+\subsection{hungarian}
+\raggedbottom\lstinputlisting[style=cpp]{code/hungarian.cpp}
+\hrulefill
 \subsection{dinic}
 \raggedbottom\lstinputlisting[style=cpp]{code/dinic.cpp}
 \hrulefill
@@ -239,11 +260,17 @@
 \subsection{MatrixDijkstra}
 \raggedbottom\lstinputlisting[style=cpp]{code/MatrixDijkstra.cpp}
 \hrulefill
+\subsection{sack}
+\raggedbottom\lstinputlisting[style=cpp]{code/sack.cpp}
+\hrulefill
 \subsection{bridges}
 \raggedbottom\lstinputlisting[style=cpp]{code/bridges.cpp}
 \hrulefill
 \subsection{Ford Fulkerson}
 \raggedbottom\lstinputlisting[style=cpp]{code/Ford_Fulkerson.cpp}
+\hrulefill
+\subsection{notes}
+\raggedbottom\lstinputlisting[style=txt]{code/notes.md}
 \hrulefill
 \subsection{caminhoeuleriano}
 \raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
@@ -292,17 +319,11 @@
 \subsection{stringhashing2}
 \raggedbottom\lstinputlisting[style=cpp]{code/stringhashing2.cpp}
 \hrulefill
-\subsection{lcp in suffix array}
-\raggedbottom\lstinputlisting[style=cpp]{code/lcp_in_suffix_array.cpp}
-\hrulefill
 \subsection{substring fft}
 \raggedbottom\lstinputlisting[style=cpp]{code/substring_fft.cpp}
 \hrulefill
 \subsection{min suffix}
 \raggedbottom\lstinputlisting[style=cpp]{code/min_suffix.cpp}
-\hrulefill
-\subsection{suffix array2}
-\raggedbottom\lstinputlisting[style=cpp]{code/suffix_array2.cpp}
 \hrulefill
 \subsection{z-function}
 \raggedbottom\lstinputlisting[style=cpp]{code/z-function.cpp}
@@ -318,6 +339,9 @@
 \hrulefill
 
 \section{Geometry}
+\subsection{smallest enclosing circle}
+\raggedbottom\lstinputlisting[style=cpp]{code/smallest_enclosing_circle.cpp}
+\hrulefill
 \subsection{ConvexHull}
 \raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull.cpp}
 \hrulefill
@@ -338,6 +362,9 @@
 \subsection{treap}
 \raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
 \hrulefill
+\subsection{segtree2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree2d.cpp}
+\hrulefill
 \subsection{mergesorttree}
 \raggedbottom\lstinputlisting[style=cpp]{code/mergesorttree.cpp}
 \hrulefill
@@ -352,6 +379,9 @@
 \hrulefill
 \subsection{min queue}
 \raggedbottom\lstinputlisting[style=cpp]{code/min_queue.cpp}
+\hrulefill
+\subsection{SegTree pa}
+\raggedbottom\lstinputlisting[style=cpp]{code/SegTree_pa.cpp}
 \hrulefill
 \subsection{segtree lazy}
 \raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
@@ -368,6 +398,9 @@
 \subsection{SegTree}
 \raggedbottom\lstinputlisting[style=cpp]{code/SegTree.cpp}
 \hrulefill
+\subsection{binary lifting}
+\raggedbottom\lstinputlisting[style=cpp]{code/binary_lifting.cpp}
+\hrulefill
 \subsection{Segtree2}
 \raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
 \hrulefill
@@ -382,6 +415,9 @@
 \hrulefill
 \subsection{fenwick2}
 \raggedbottom\lstinputlisting[style=cpp]{code/fenwick2.cpp}
+\hrulefill
+\subsection{bit2D}
+\raggedbottom\lstinputlisting[style=cpp]{code/bit2D.cpp}
 \hrulefill
 \subsection{fenwick}
 \raggedbottom\lstinputlisting[style=cpp]{code/fenwick.cpp}
