adding more codes

--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -236,6 +236,9 @@
 \subsection{dsu}
 \raggedbottom\lstinputlisting[style=cpp]{code/dsu.cpp}
 \hrulefill
+\subsection{block-cut-tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/block-cut-tree.cpp}
+\hrulefill
 \subsection{reroot}
 \raggedbottom\lstinputlisting[style=cpp]{code/reroot.cpp}
 \hrulefill
@@ -268,6 +271,9 @@
 \hrulefill
 \subsection{Ford Fulkerson}
 \raggedbottom\lstinputlisting[style=cpp]{code/Ford_Fulkerson.cpp}
+\hrulefill
+\subsection{bipartite}
+\raggedbottom\lstinputlisting[style=cpp]{code/bipartite.cpp}
 \hrulefill
 \subsection{notes}
 \raggedbottom\lstinputlisting[style=txt]{code/notes.md}
