--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -11,6 +11,9 @@
 \subsection{UpperBound}
 \raggedbottom\lstinputlisting[style=cpp]{code/UpperBound.cpp}
 \hrulefill
+\subsection{parallel binary search}
+\raggedbottom\lstinputlisting[style=cpp]{code/parallel_binary_search.cpp}
+\hrulefill
 \subsection{STL}
 \raggedbottom\lstinputlisting[style=cpp]{code/STL.cpp}
 \hrulefill
@@ -28,6 +31,9 @@
 \subsection{coordinate compression}
 \raggedbottom\lstinputlisting[style=cpp]{code/coordinate_compression.cpp}
 \hrulefill
+\subsection{tower of hanoi}
+\raggedbottom\lstinputlisting[style=cpp]{code/tower_of_hanoi.cpp}
+\hrulefill
 \subsection{two pointers}
 \raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
 \hrulefill
@@ -39,6 +45,9 @@
 \hrulefill
 \subsection{stack trick}
 \raggedbottom\lstinputlisting[style=cpp]{code/stack_trick.cpp}
+\hrulefill
+\subsection{segment covering}
+\raggedbottom\lstinputlisting[style=cpp]{code/segment_covering.cpp}
 \hrulefill
 
 \section{STL}
@@ -52,6 +61,9 @@
 \section{Utils}
 \subsection{runner2}
 \raggedbottom\lstinputlisting[style=py]{code/runner2.py}
+\hrulefill
+\subsection{rand}
+\raggedbottom\lstinputlisting[style=cpp]{code/rand.cpp}
 \hrulefill
 \subsection{  int128}
 \raggedbottom\lstinputlisting[style=cpp]{code/__int128.cpp}
@@ -109,6 +121,9 @@
 \subsection{mobius}
 \raggedbottom\lstinputlisting[style=cpp]{code/mobius.cpp}
 \hrulefill
+\subsection{berlekamp massey}
+\raggedbottom\lstinputlisting[style=cpp]{code/berlekamp_massey.cpp}
+\hrulefill
 \subsection{fft}
 \raggedbottom\lstinputlisting[style=cpp]{code/fft.cpp}
 \hrulefill
@@ -126,6 +141,9 @@
 \hrulefill
 \subsection{baby step gigant step}
 \raggedbottom\lstinputlisting[style=cpp]{code/baby_step_gigant_step.cpp}
+\hrulefill
+\subsection{simplex}
+\raggedbottom\lstinputlisting[style=cpp]{code/simplex.cpp}
 \hrulefill
 \subsection{stars and bars}
 \raggedbottom\lstinputlisting[style=cpp]{code/stars_and_bars.cpp}
@@ -147,6 +165,9 @@
 \subsection{cht}
 \raggedbottom\lstinputlisting[style=cpp]{code/cht.cpp}
 \hrulefill
+\subsection{subset sum}
+\raggedbottom\lstinputlisting[style=cpp]{code/subset_sum.cpp}
+\hrulefill
 \subsection{subsequences string}
 \raggedbottom\lstinputlisting[style=cpp]{code/subsequences_string.cpp}
 \hrulefill
@@ -161,6 +182,9 @@
 \hrulefill
 \subsection{broken profile}
 \raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
+\hrulefill
+\subsection{bitwise digit dp}
+\raggedbottom\lstinputlisting[style=cpp]{code/bitwise_digit_dp.cpp}
 \hrulefill
 \subsection{exchange arguments}
 \raggedbottom\lstinputlisting[style=cpp]{code/exchange_arguments.cpp}
@@ -192,8 +216,19 @@
 \subsection{expected value}
 \raggedbottom\lstinputlisting[style=cpp]{code/expected_value.cpp}
 \hrulefill
+\subsection{lichao}
+\raggedbottom\lstinputlisting[style=cpp]{code/lichao.cpp}
+\hrulefill
 \subsection{Digitdp}
 \raggedbottom\lstinputlisting[style=cpp]{code/Digitdp.cpp}
+\hrulefill
+
+\section{Theorems and Formulas}
+\subsection{chicken mcnugget}
+\raggedbottom\lstinputlisting[style=txt]{code/chicken_mcnugget.md}
+\hrulefill
+\subsection{graph notes}
+\raggedbottom\lstinputlisting[style=txt]{code/graph_notes.md}
 \hrulefill
 
 \section{Graph}
@@ -217,6 +252,9 @@
 \hrulefill
 \subsection{articulation points}
 \raggedbottom\lstinputlisting[style=cpp]{code/articulation_points.cpp}
+\hrulefill
+\subsection{flow with minimum capacities}
+\raggedbottom\lstinputlisting[style=cpp]{code/flow_with_minimum_capacities.cpp}
 \hrulefill
 \subsection{tree isomorfism}
 \raggedbottom\lstinputlisting[style=cpp]{code/tree_isomorfism.cpp}
@@ -275,9 +313,6 @@
 \subsection{bipartite}
 \raggedbottom\lstinputlisting[style=cpp]{code/bipartite.cpp}
 \hrulefill
-\subsection{notes}
-\raggedbottom\lstinputlisting[style=txt]{code/notes.md}
-\hrulefill
 \subsection{caminhoeuleriano}
 \raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
 \hrulefill
@@ -298,6 +333,9 @@
 \hrulefill
 \subsection{DFS}
 \raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
+\hrulefill
+\subsection{stable matching}
+\raggedbottom\lstinputlisting[style=cpp]{code/stable_matching.cpp}
 \hrulefill
 \subsection{cycle detection}
 \raggedbottom\lstinputlisting[style=cpp]{code/cycle_detection.cpp}
@@ -340,11 +378,17 @@
 \subsection{manacher}
 \raggedbottom\lstinputlisting[style=cpp]{code/manacher.cpp}
 \hrulefill
+\subsection{de bruijin}
+\raggedbottom\lstinputlisting[style=cpp]{code/de_bruijin.cpp}
+\hrulefill
 \subsection{stringhashing}
 \raggedbottom\lstinputlisting[style=cpp]{code/stringhashing.cpp}
 \hrulefill
 
 \section{Geometry}
+\subsection{dynamic ch}
+\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_ch.cpp}
+\hrulefill
 \subsection{smallest enclosing circle}
 \raggedbottom\lstinputlisting[style=cpp]{code/smallest_enclosing_circle.cpp}
 \hrulefill
@@ -354,8 +398,14 @@
 \subsection{minkowski}
 \raggedbottom\lstinputlisting[style=cpp]{code/minkowski.cpp}
 \hrulefill
+\subsection{halfplane intersection}
+\raggedbottom\lstinputlisting[style=cpp]{code/halfplane_intersection.cpp}
+\hrulefill
 \subsection{LineSweep}
 \raggedbottom\lstinputlisting[style=cpp]{code/LineSweep.cpp}
+\hrulefill
+\subsection{kd tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/kd_tree.cpp}
 \hrulefill
 \subsection{points and vectors}
 \raggedbottom\lstinputlisting[style=cpp]{code/points_and_vectors.cpp}
@@ -371,14 +421,14 @@
 \subsection{segtree2d}
 \raggedbottom\lstinputlisting[style=cpp]{code/segtree2d.cpp}
 \hrulefill
+\subsection{mo update}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_update.cpp}
+\hrulefill
 \subsection{mergesorttree}
 \raggedbottom\lstinputlisting[style=cpp]{code/mergesorttree.cpp}
 \hrulefill
 \subsection{sparsetable}
 \raggedbottom\lstinputlisting[style=cpp]{code/sparsetable.cpp}
-\hrulefill
-\subsection{sqrt decomposition2}
-\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition2.cpp}
 \hrulefill
 \subsection{implicit seg}
 \raggedbottom\lstinputlisting[style=cpp]{code/implicit_seg.cpp}
@@ -410,9 +460,6 @@
 \subsection{Segtree2}
 \raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
 \hrulefill
-\subsection{sqrt decomposition}
-\raggedbottom\lstinputlisting[style=cpp]{code/sqrt_decomposition.cpp}
-\hrulefill
 \subsection{color update}
 \raggedbottom\lstinputlisting[style=cpp]{code/color_update.cpp}
 \hrulefill
@@ -421,6 +468,9 @@
 \hrulefill
 \subsection{fenwick2}
 \raggedbottom\lstinputlisting[style=cpp]{code/fenwick2.cpp}
+\hrulefill
+\subsection{mo}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo.cpp}
 \hrulefill
 \subsection{bit2D}
 \raggedbottom\lstinputlisting[style=cpp]{code/bit2D.cpp}
