--- a/Notebook (based on the stanfordacm script)/notebook.tex
+++ b/Notebook (based on the stanfordacm script)/notebook.tex
@@ -21,7 +21,7 @@
     breaklines=true,
     xleftmargin=\parindent,
     showstringspaces=false,
-    basicstyle=\fontsize{10}{11}\ttfamily,
+    basicstyle=\fontsize{7}{7}\ttfamily,
 }
 \lstdefinestyle{cpp}{
 	style=shared,
@@ -53,18 +53,18 @@
 \lstset{escapechar=@}
 
 \pagestyle{fancy}
-\fancyhead[L]{UFAL Notebook}
+\fancyhead[L]{Geração EAD Coda y Coda}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
 \fancypagestyle{plain}
 {
-\fancyhead[L]{UFAL Notebook}
+\fancyhead[L]{Geração EAD Coda y Coda}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 }
 
-\title{\vspace{-4ex}\Large{UFAL Notebook}}
+\title{\vspace{-4ex}\Large{Geração EAD Coda y Coda}}
 \author{}
 \date{}
 
