--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -37,6 +37,9 @@
 \subsection{two pointers}
 \raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
 \hrulefill
+\subsection{prefix sum 2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/prefix_sum_2d.cpp}
+\hrulefill
 \subsection{inversion count}
 \raggedbottom\lstinputlisting[style=cpp]{code/inversion_count.cpp}
 \hrulefill
@@ -82,11 +85,17 @@
 \subsection{iterative fft}
 \raggedbottom\lstinputlisting[style=cpp]{code/iterative_fft.cpp}
 \hrulefill
+\subsection{extended euclidean}
+\raggedbottom\lstinputlisting[style=cpp]{code/extended_euclidean.cpp}
+\hrulefill
 \subsection{max xor subsequence}
 \raggedbottom\lstinputlisting[style=cpp]{code/max_xor_subsequence.cpp}
 \hrulefill
 \subsection{fraction}
 \raggedbottom\lstinputlisting[style=cpp]{code/fraction.cpp}
+\hrulefill
+\subsection{catalan}
+\raggedbottom\lstinputlisting[style=cpp]{code/catalan.cpp}
 \hrulefill
 \subsection{gaussian elimination2}
 \raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination2.cpp}
@@ -108,6 +117,9 @@
 \hrulefill
 \subsection{matrix exponentiation2}
 \raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation2.cpp}
+\hrulefill
+\subsection{mobius2}
+\raggedbottom\lstinputlisting[style=cpp]{code/mobius2.cpp}
 \hrulefill
 \subsection{segmentedsieve}
 \raggedbottom\lstinputlisting[style=cpp]{code/segmentedsieve.cpp}
@@ -145,11 +157,17 @@
 \subsection{simplex}
 \raggedbottom\lstinputlisting[style=cpp]{code/simplex.cpp}
 \hrulefill
+\subsection{matrix inverse and determinant}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_inverse_and_determinant.cpp}
+\hrulefill
 \subsection{stars and bars}
 \raggedbottom\lstinputlisting[style=cpp]{code/stars_and_bars.cpp}
 \hrulefill
 \subsection{matrix exponentiation}
 \raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
+\hrulefill
+\subsection{binomial theorem}
+\raggedbottom\lstinputlisting[style=cpp]{code/binomial_theorem.cpp}
 \hrulefill
 \subsection{diophantine}
 \raggedbottom\lstinputlisting[style=cpp]{code/diophantine.cpp}
@@ -230,6 +248,9 @@
 \subsection{graph notes}
 \raggedbottom\lstinputlisting[style=txt]{code/graph_notes.md}
 \hrulefill
+\subsection{binomial theorem}
+\raggedbottom\lstinputlisting[style=txt]{code/binomial_theorem.md}
+\hrulefill
 
 \section{Graph}
 \subsection{centroid decomposition2}
@@ -273,6 +294,9 @@
 \hrulefill
 \subsection{dsu}
 \raggedbottom\lstinputlisting[style=cpp]{code/dsu.cpp}
+\hrulefill
+\subsection{link cut tree edge}
+\raggedbottom\lstinputlisting[style=cpp]{code/link_cut_tree_edge.cpp}
 \hrulefill
 \subsection{block-cut-tree}
 \raggedbottom\lstinputlisting[style=cpp]{code/block-cut-tree.cpp}
@@ -334,6 +358,9 @@
 \subsection{DFS}
 \raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
 \hrulefill
+\subsection{erdos gallai}
+\raggedbottom\lstinputlisting[style=cpp]{code/erdos_gallai.cpp}
+\hrulefill
 \subsection{stable matching}
 \raggedbottom\lstinputlisting[style=cpp]{code/stable_matching.cpp}
 \hrulefill
@@ -392,6 +419,9 @@
 \subsection{smallest enclosing circle}
 \raggedbottom\lstinputlisting[style=cpp]{code/smallest_enclosing_circle.cpp}
 \hrulefill
+\subsection{polygon area}
+\raggedbottom\lstinputlisting[style=cpp]{code/polygon_area.cpp}
+\hrulefill
 \subsection{ConvexHull}
 \raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull.cpp}
 \hrulefill
@@ -442,6 +472,9 @@
 \subsection{segtree lazy}
 \raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
 \hrulefill
+\subsection{segtree max seg sum}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree_max_seg_sum.cpp}
+\hrulefill
 \subsection{fenwick3}
 \raggedbottom\lstinputlisting[style=cpp]{code/fenwick3.cpp}
 \hrulefill
@@ -459,6 +492,9 @@
 \hrulefill
 \subsection{Segtree2}
 \raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
+\hrulefill
+\subsection{rmq}
+\raggedbottom\lstinputlisting[style=cpp]{code/rmq.cpp}
 \hrulefill
 \subsection{color update}
 \raggedbottom\lstinputlisting[style=cpp]{code/color_update.cpp}
